Página de contato criada

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -6,6 +6,25 @@
     <title>Contato</title>
 </head>
 <body>
-    <h1>EM PRODUÇÃO</h1>
+    <section>
+        <h2>Entre em contato</h2>
+        <form action="" method="post">
+            <label>Nome</label>
+            <input type="text" name="name" placeholder="Digio o seu nome" autocomplete="off">
+
+            <label>Telefone</label>
+            <input type="text" name="telefone" placeholder="Digio o seu melhor número" autocomplete="off"             >
+
+            <label>E-mail</label>
+            <input type="email" name="email" placeholder="Digite seu email" autocomplete="off">
+
+            <label>Mensagem</label>
+            <textarea name="mensagem" cols="30" rows="10" placeholder="Digio uma mensagem para mim"></textarea>
+
+
+            <button type="submit">ENVIAR</button>
+        </form>
+
+    </section>
 </body>
 </html>
